# dash-access

./: README.md  local.sqlite3  pyproject.toml  setup.py  test_admin.py
dash_access/: __init__.py  auth.py  create_tables.py
dash_access/access/: control.py  data.py  group.py  relationship.py  relationship_objects.py  user.py
dash_access/admin/: index.py
dash_access/auth/: auth.py  pw.py
dash_access/clients/: base.py  dynamo.py  postgres.py  sqlite3.py
dash_access/docs/: ADMIN.md  DEVELOPMENT.md  OVERVIEW.md  SETUP.md  STRATEGY.md
dash_access/utils/: dev_utils.py
docs/: Gemfile  _config.yml
docs/_posts/: 2023-01-17-welcome-to-jekyll.markdown
example/: local.sqlite3  local.sqlite3-shm  local.sqlite3-wal
example/pg/: create_postgres.py  postgres_setup.py
example/postgres/: README.md  postgres.py  postgres_setup.py
example/sq/: README.md  local.sqlite3  local.sqlite3-shm  local.sqlite3-wal  sqlite.py  sqlite_setup.py
example/sqlite/: local.sqlite3  sqlite.py
