[tool.poetry]
name = "dash-access"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dash_access"}]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.8.0"
dash-bootstrap-components = "^1.3.0"
Flask-Login = "^0.6.2"
flask-sqlalchemy = "^3.0.2"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
